# library-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: lint-project.yml  python-publish.yml  test-project.yml
example/: main.py
scadable/: __init__.py  _client.py  _config.py  _exceptions.py  connection.py  device.py  facility.py
scadable/_models/: __init__.py  _base.py  _gateway.py  _project.py  _telemetry.py  _user.py
scadable/_resources/: __init__.py  _base.py  _gateways.py  _projects.py  _users.py
scadable/_transport/: __init__.py  _base.py  _http.py  _websocket.py
src/scadable/: __init__.py
src/scadable/live_query/: __init__.py  connection_type.py  live_telemetry.py
tests/: conftest.py  mock_connection.py  test_async.py  test_client.py  test_connection_type.py  test_device.py  test_errors.py  test_facility.py  test_gateways.py  test_import.py  test_list_edge_cases.py  test_live_query.py  test_models.py  test_projects.py  test_streaming.py  test_transport.py
