[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scadable"
version = "0.0.1"
authors = [
    { name = "Christopher Li" },
]
description = "A Python library for scalable and modular software development."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
    "pre-commit"
]


[project.urls]
"Homepage" = "https://github.com/scadable/library-python"
"Bug Tracker" = "https://github.com/scadable/library-python/issues"
