[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scadable"
version = "1.0.0"
authors = [
    { name = "Christopher Li" },
]
description = "A Python library for scalable and modular software development."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "websockets >= 13.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
    "pytest-asyncio",
    "pre-commit"
]


[project.urls]
"Homepage" = "https://github.com/scadable/library-python"
"Bug Tracker" = "https://github.com/scadable/library-python/issues"

[tool.ruff]
# Ignore all tests
extend-exclude = ["tests"]
