[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "scadable"
version = "2.0.2"
authors = [
    { name = "Scadable" },
]
description = "Official Python SDK for the Scadable IoT platform."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "httpx >= 0.27",
    "pydantic >= 2.0",
    "websockets >= 13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "coverage",
    "ruff",
    "pre-commit",
]

[project.urls]
"Homepage" = "https://github.com/scadable/library-python"
"Bug Tracker" = "https://github.com/scadable/library-python/issues"

[tool.ruff]
extend-exclude = ["tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
